--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!--header-->
 
     <header>
-        <img src="/img/logo.svg" alt="logoHeader">
+        <img src="./img/logo.svg" alt="logoHeader">
         <nav class="navBar">
         <a href="#">Pricing</a>
         <a href="#">Product</a>
@@ -37,7 +37,7 @@
 <!--bienvenida-->
 
         <section class="bienvenida">
-            <img src="/img/ilustration-intro.svg"   alt="graficos" class="imagenGraficos">
+            <img src="./img/ilustration-intro.svg"   alt="graficos" class="imagenGraficos">
             <div>
             <h2>Bring everyone together to build better products.</h2>
             <p>Manage makes it simple for software teams to plan day-to-day tasks while keeping the large team goals in view </p>
@@ -83,17 +83,17 @@
 
         <div class="card">
             <div class="Anisha">
-                <img src="/img/avatar-anisha.png" alt="Anisha">
+                <img src="./img/avatar-anisha.png" alt="Anisha">
                 <h3>Ali Bravo</h3>
                 <p>“Manage has supercharged our team´s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”</p>
             </div>
             <div class="Ali">
-                <img src="/img/avatar-ali.png" alt="Ali">
+                <img src="./img/avatar-ali.png" alt="Ali">
                 <h3>Ali Bravo</h3>
                 <p>“We have been able to cancel so many other subscriptions since using manage. There ir no more cross-channel confusion and everyone is much more focused.”</p>
             </div>
             <div class="Richard">
-                <img src="/img/avatar-richard.png" alt="Richard">
+                <img src="./img/avatar-richard.png" alt="Richard">
                 <h3>Ali Bravo</h3>
                 <p>“Manage allows us to provide structure and process. It keeps us organized and focused. I can´t stop recommending them to everyone i talk to!”</p>
             </div>
@@ -121,7 +121,7 @@
         <div class="footerPosition">
         <section class="footerForm">
             <form action="#" method="get">
-                <input class="formulario" name="email" type="email"         placeholder="Updates in your inbox" required>
+                <input class="formulario" name="email" type="email" placeholder="Updates in your inbox" required>
                 <label for="email"></label>
                 <button class="go" type="submit">Go</button>
             </form>
@@ -151,7 +151,7 @@
             <a href="#"><i class="fab fa-instagram-square"></i></a>
         </nav>
         </div>
-        <img src="/img/Logo1.png" alt="logo" class="logoFooter">
+        <img src="./img/Logo1.png" alt="logo" class="logoFooter">
         <p class="footerP">Copyright 2020. All Rights Reserved</p>
     </footer>
 
